--- a/src/faction-board/FactionBoard.module.css
+++ b/src/faction-board/FactionBoard.module.css
@@ -1,6 +1,6 @@
 .board {
   border: 2px solid black;
-  width: 50%;
+  width: 55%;
 }
 
 .header {
@@ -33,3 +33,16 @@
   margin: 4px;
 }
 
+.reputationTrack {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border: 2px solid black;
+  margin: 4px;
+  width: 25px;
+}
+
+.reputation {
+  border-top: 1px dashed black;
+  width: 100%;
+}
