Market board WIP

--- a/src/deck/Deck.module.css
+++ b/src/deck/Deck.module.css
@@ -1,9 +1,10 @@
 .deck {
   padding: 8px;
+  width: 120px;
 }
 
 .cardBack {
-  width: 50px;
-  width: 70px;
-  border-radius: 5px;
+  width: 100px;
+  height: 140px;
+  border-radius: 8px;
 }
