--- a/src/market/Market.module.css
+++ b/src/market/Market.module.css
@@ -1,5 +1,23 @@
 .cardStacks {
+  /* display: flex; */
+  /* justify-direction: row; */
+  /* justify-content: center; */
+}
+
+.cardMarket {
   display: flex;
-  justify-direction: row;
-  justify-content: center;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.cardSlot {
+  width: 104px;
+  height: 144px;
+  border: 1px solid black;
+  margin: 8px;
+  margin-top: 24px;
 }
