--- a/src/components/storage/Storage.module.css
+++ b/src/components/storage/Storage.module.css
@@ -13,3 +13,15 @@
   fill-opacity: 0.7;
   transition: fill-opacity .5s;
 }
+
+.resourceCounter {
+  width: 30px;
+  margin-right: 16px;
+}
+
+.counters {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+  padding-left: 9px;
+}
