--- a/src/components/cards/card/Card.module.css
+++ b/src/components/cards/card/Card.module.css
@@ -3,9 +3,15 @@
 }
 
 .card {
+  font-size: 12px;
   border: 1px solid black;
   border-radius: 8px;
   margin: 2px;
   height: 140px;
   width: 100px;
+}
+
+.name {
+  font-weight: bold;
+  margin: 5px;
 }
