--- a/src/components/resource-card-stack/ResourceCardStack.module.css
+++ b/src/components/resource-card-stack/ResourceCardStack.module.css
@@ -2,6 +2,10 @@
   border: 1px solid black;
   width: 40px;
   height: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .cardLocation {
@@ -12,4 +16,8 @@
   width: 80px;
   height: 100px;
   border: 1px solid yellow;
+}
+
+.icon {
+  width: 25px;
 }
