resouce cache with icons

--- a/src/components/faction-board/FactionBoard.module.css
+++ b/src/components/faction-board/FactionBoard.module.css
@@ -5,9 +5,9 @@
 
 .resourceCache {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: column;
-  height: 100px;
+  height: 100%;
 }
 
 .board {
