--- a/src/components/resource-card-stack/ResourceCardStack.module.css
+++ b/src/components/resource-card-stack/ResourceCardStack.module.css
@@ -6,18 +6,27 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  background: white;
 }
 
 .cardLocation {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-
+  align-items: center;
   width: 80px;
   height: 100px;
-  border: 1px solid yellow;
+  margin: 18px 0;
+  background: rgb(255,255,255);
+  background: linear-gradient(90deg, rgba(255,255,255,1) 38%, rgba(206,246,206,1) 100%);
 }
 
 .icon {
   width: 25px;
+}
+
+.resourceType {
+  width: 50px;
+  height: 50px;
+  opacity: 0.3;
 }
